Algumas alterações para deixar ainda melhor

--- a/Pedra-papel-Tesoura/index.html
+++ b/Pedra-papel-Tesoura/index.html
@@ -12,23 +12,25 @@
     <div class="boas-vindas"> 
         <h1 style="text-align: center;">Pedra papel ou Tesoura!</h1>
         <hr>
-        
-    </div>
+    </div><!--boas-vindas-->
+
     <div class="container-align">
         <div class="player-options">
-            <div><img opt="pedra" src="/Módulo 8 -  Pedra papel ou tesoura/images/pedra.png"></div> 
-            <div><img opt="papel" src="/Módulo 8 -  Pedra papel ou tesoura/images/papel.jpg"></div>
-            <div><img opt="tesoura" src="/Módulo 8 -  Pedra papel ou tesoura/images/tesoura.jpg"></div>
-        </div>
+            <div><img opt="pedra" src="/images/pedra.png"></div> 
+            <div><img opt="papel" src="/images/papel.jpg"></div>
+            <div><img opt="tesoura" src="/images/tesoura.jpg"></div>
+        </div><!--player-options-->
 
         <div class="enemy-options">
-            <div><img opt="pedra" src="/Módulo 8 -  Pedra papel ou tesoura/images/pedra.png"></div> 
-            <div><img opt="papel" src="/Módulo 8 -  Pedra papel ou tesoura/images/papel.jpg"></div>
-            <div><img opt="tesoura" src="/Módulo 8 -  Pedra papel ou tesoura/images/tesoura.jpg"></div>
-        </div>
-    </div>
+            <div><img opt="pedra" src="/images/pedra.png"></div> 
+            <div><img opt="papel" src="/images/papel.jpg"></div>
+            <div><img opt="tesoura" src="/images/tesoura.jpg"></div>
+        </div><!--enemy-options-->
+    </div><!--container-align-->
 
     <h2 class="vencedor"></h2>
+
+
 
     <script src="script.js"></script>
 </body>
